--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         const [isSent, setIsSent] = useState(false);
 
         // REPLACE WITH YOUR ACTUAL DISCORD WEBHOOK URL
-        const DISCORD_WEBHOOK_URL = "YOUR_DISCORD_WEBHOOK_URL_HERE";
+        const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1449711276694437939/2qWzB5uwk1dbET8bsx-U153KIdloOJgKMHCxN91tyjLBmhEg-hScEw0oqOvrC7iGfuSG";
 
         const handleSubmit = async (e) => {
           e.preventDefault();
@@ -575,7 +575,7 @@
           };
 
           try {
-            if (DISCORD_WEBHOOK_URL && DISCORD_WEBHOOK_URL !== "YOUR_DISCORD_WEBHOOK_URL_HERE") {
+            if (DISCORD_WEBHOOK_URL && DISCORD_WEBHOOK_URL !== "https://discord.com/api/webhooks/1449710662136889469/2LwSKLi78-_wvDhJqSfgyKTBIqDzZR5MEdQz0JsM6Z_5-lb-h_wK8d0jv_PiJ_z36G2I") {
                 await fetch(DISCORD_WEBHOOK_URL, {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
@@ -1372,11 +1372,11 @@
         const [numberCopied, setNumberCopied] = useState(false);
 
         const PAYMENT_NUMBERS = {
-          bKash: "01700000000",
-          Nagad: "01800000000"
+          bKash: "01911163013",
+          Nagad: "01757382315"
         };
 
-        const DISCORD_WEBHOOK_URL = "YOUR_DISCORD_WEBHOOK_URL_HERE"; 
+        const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1449718009114529812/K49t6_wP8diE5QIPZ0QDY4yMT0Tqbl2vgPwYSp1bEo5yTYcQc6o-oBMar9_ox3M0KDw_"; 
 
         if (!isOpen) return null;
 
