--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@
             const [error, setError] = useState('');
 
             // ⚠️ REPLACE THIS WITH YOUR ACTUAL DISCORD WEBHOOK URL
-            const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN";
+            const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1449710662136889469/2LwSKLi78-_wvDhJqSfgyKTBIqDzZR5MEdQz0JsM6Z_5-lb-h_wK8d0jv_PiJ_z36G2I";
 
             const handleSubmit = async (e) => {
                 e.preventDefault();
                 setIsSending(true);
                 setError('');
 
-                if (DISCORD_WEBHOOK_URL.includes("YOUR_WEBHOOK_ID")) {
+                if (DISCORD_WEBHOOK_URL.includes("1449710662136889469")) {
                     setError("Webhook URL is not configured in the code.");
                     setIsSending(false);
                     return;
